# HealthTracker

./: .dockerignore  .env.example  .gitignore  Build Windows Installer.bat  Create Dev Desktop Shortcut.bat  Dockerfile  Health Tracker (Dev).lnk  Launch Health Tracker (Dev).bat  Launch Health Tracker.bat  README.md  create-desktop-shortcut.ps1  dev.ps1  fly.toml  index.html  install-windows-shortcuts.ps1  package-lock.json  package.json
src-tauri/: Cargo.toml  tauri.android.conf.json  tauri.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: android.json  default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_initial.sql  002_journey_start.sql  003_score_weight_defaults.sql  004_metabolism_profile.sql  005_birth_date.sql  006_perfect_day_and_thresholds.sql  007_add_salt.sql  008_food_library_auto_populated.sql  009_macro_goals_and_day_totals.sql  010_food_score_weights.sql  011_workout_calories.sql  012_calorie_warning_below.sql  013_target_monthly_weight_change.sql  014_target_weight_change_unit.sql  015_target_weight_change_unit_default.sql  016_workouts_per_week.sql  017_day_workouts.sql  018_workout_type.sql  019_accent_color.sql  020_accent_default_blue.sql  021_remove_cyan_accent.sql  022_workout_templates.sql  023_routines.sql  024_exercise_progress.sql  025_exercise_log_sets.sql  026_meal_estimate.sql  027_gemini_model_default.sql  028_meal_estimate_api_logs.sql  029_sync_metadata.sql  030_water_goal.sql  031_teeth_brushing.sql  032_rebalance_score_weights.sql  033_ai_settings.sql  034_ai_api_logs.sql
src-tauri/src/: backup.rs  commands.rs  day_totals.rs  day_workouts.rs  db.rs  exercise_progress.rs  gemini.rs  lib.rs  meal_estimate.rs  progress_feedback.rs  seed_foods.rs  sync.rs
src-tauri/src/app/: ai_service.rs  backup_service.rs  mod.rs  (+7 more)
(+158 files in other folders)
